# deployer

./: .gitignore  flake.nix  pyproject.toml
.github/workflows/: ci.yml
deployer/: gitrepo.py  main.py  secrets.py
deployer/default_nix/: configuration.nix  flake.nix
deployer/tests/: conftest.py
deployer/tests/cli/: test_cli.py
deployer/tests/test_host/etc/nixos/: configuration.nix  flake.nix  sshconfig.nix
deployer/tests/test_repo/.secrets/hosts/testhost/: secret
deployer/tests/test_repo/hosts/testhost/: configuration.nix  flake.nix  hardware-configuration.nix
deployer/tests/test_repo/secrets/: secrets.nix  secrets.sh
deployer/tests/unit/: test_secrets.py
tests/: conftest.py
tests/cli/: test_cli.py
tests/test_host/etc/nixos/: configuration.nix  hardware-configuration.nix
tests/test_host/etc/ssh/: ssh_host_ed25519_key
tests/test_repo/configs/ssh/: ssh_host_ed25519_key.pub
tests/test_repo/secrets/: secrets.nix
tests/test_repo/secrets/hosts/testhost/: secret.age
tests/unit/: test_gitrepo.py  test_secrets.py
