[tool.poetry]
name = "deployer"
version = "0.1.0"
description = "A tool to manage flake based nix configurations with shared secrets and configs without copying the whole config repo to every machine"
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
click = "*"

[tool.poetry.dev-dependencies]
#pytest = "^6.2.5"
#ipython = "^7.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deployer = "deployer.main:cli"
